--- a/frontend-pwa/src/app.css
+++ b/frontend-pwa/src/app.css
@@ -510,11 +510,11 @@ body {
   }
   
   .tour-heading {
-    @apply text-lg font-bold leading-snug text-[#e9e4d3];
+    @apply text-lg font-bold leading-snug text-[#e9e4d3] mb-6;
   }
   
   .tour-icon {
-    @apply w-16 h-16 mx-auto my-4;
+    @apply w-30 h-30 mx-auto mb-6;
   }
   
   .tour-description {
@@ -1129,6 +1129,38 @@ body {
     border-radius: 9999px;
     cursor: pointer;
   }
+
+  .typing-loader {
+  margin-top: 3rem;
+  font-family: serif;
+  font-size: 1.125rem;
+  color: #141420;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 2px solid #c6b06e;
+  width: fit-content;
+  animation: typing 3s steps(30, end) infinite, blink 0.75s step-end infinite;
+}
+
+.typed-text {
+  display: inline-block;
+}
+
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 26ch;
+  }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+
 
   /* === TP Available Styles === */
 
