--- a/frontend-pwa/src/app.css
+++ b/frontend-pwa/src/app.css
@@ -907,6 +907,18 @@ body {
     border: none;
     cursor: pointer;
   }
+
+  .speak-btn {
+  background-color: #c6b06e;
+  color: black;
+  font-weight: bold;
+  border: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 2rem;
+  margin-top: 1rem;
+  cursor: pointer;
+}
+
   
 
   /* --------------------------
